package inf5153.patterns;

/**
 * Created by wflag on 2020-07-13.
 */
public interface Visitable {
    void accept(Visitor visitor);
}
